# Jackal-Hotseat

./: CMakeLists.txt  Field.h  GUI.h  README.md  SHAKAL.h  Sbasic.h  main.cpp  player.h  resources.h  units.h
src/: Field.cpp  GUI.cpp  SHAKAL.cpp  Sbasic.cpp  player.cpp  units.cpp
